# GameAnimation-Tutorial

./: .gitignore  .gitmodules  CMakeLists.txt
Assets/Shaders/: FlatModel.fs.glsl  FlatModel.vs.glsl  LitTexturedModel.fs.glsl  LitTexturedModel.vs.glsl  TexturedModel.fs.glsl  TexturedModel.vs.glsl  text.fs.glsl  text.vs.glsl
src/: Camera.cpp  Camera.h  GLTFLoader.cpp  GLTFLoader.h  LightRenderer.cpp  LightRenderer.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ShaderLoader.cpp  ShaderLoader.h  TextRenderer.cpp  TextRenderer.h  TextureLoader.cpp  TextureLoader.h  main.cpp
src/Animation/: Frame.h  Interpolation.h  Track.cpp  Track.h
